InternexDev_Sandbox/src/objects/Draw_Request__c.object
<CustomObject>
    <fields>
        <fullName>Account_to_recieve_Fund__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account to recieve Fund</label>
        <referenceTo>Debtor__c</referenceTo>
        <relationshipLabel>Draw Requests</relationshipLabel>
        <relationshipName>Draw_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Amount_Drawn__c</fullName>
        <label>Current Amount Drawn</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Draw_Fee__c</fullName>
        <label>Draw Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Draw_Request__c</fullName>
        <label>Draw Request</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Projected_Amount_Drawn__c</fullName>
        <label>Projected Amount Drawn</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Projected_Availability__c</fullName>
        <label>Projected Availability</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transfer_Type__c</fullName>
        <label>Transfer Type</label>
        <picklist>
            <picklistValues>
                <fullName>ACH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wire</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Draw Request</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Draw Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Draw Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>